--- a/yurina.html
+++ b/yurina.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>header</header>
-    <nav>left</nav>
+    <nav>sound</nav>
     <main>center</main>
     <aside>right</aside>
   
